// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shadow File resource e2e shadow file resource test: ShadowFile create 1`] = `
Object {
  "_message": "Shadowed src/gatsby-theme-blog/components/author.js from gatsby-theme-blog",
  "contents": "import React from 'react'

export default () => <h1>F. Scott Fitzgerald</h1>
",
  "id": "src/gatsby-theme-blog/components/author.js",
  "path": "src/gatsby-theme-blog/components/author.js",
  "theme": "gatsby-theme-blog",
}
`;

exports[`Shadow File resource e2e shadow file resource test: ShadowFile create plan 1`] = `
Object {
  "currentState": Object {},
  "describe": "Shadow src/components/author.js from the theme gatsby-theme-blog",
  "diff": "[32m+[m[32mimport React from 'react'[m
 [m
[32m+[m[32mexport default () => <h1>F. Scott Fitzgerald</h1>[m
",
  "id": "src/gatsby-theme-blog/components/author.js",
  "newState": Object {
    "contents": "import React from 'react'

export default () => <h1>F. Scott Fitzgerald</h1>
",
    "id": "src/gatsby-theme-blog/components/author.js",
    "path": "src/components/author.js",
    "theme": "gatsby-theme-blog",
  },
  "path": "src/components/author.js",
  "theme": "gatsby-theme-blog",
}
`;

exports[`Shadow File resource e2e shadow file resource test: ShadowFile destroy 1`] = `
Object {
  "_message": "Shadowed src/gatsby-theme-blog/components/author.js from gatsby-theme-blog",
  "contents": "import React from 'react'

export default () => <h1>F. Scott Fitzgerald</h1>
",
  "id": "src/gatsby-theme-blog/components/author.js",
  "path": "src/gatsby-theme-blog/components/author.js",
  "theme": "gatsby-theme-blog",
}
`;

exports[`Shadow File resource e2e shadow file resource test: ShadowFile update 1`] = `
Object {
  "_message": "Shadowed src/gatsby-theme-blog/components/author.js from gatsby-theme-blog",
  "contents": "import React from 'react'

export default () => <h1>F. Scott Fitzgerald</h1>
",
  "id": "src/gatsby-theme-blog/components/author.js",
  "path": "src/gatsby-theme-blog/components/author.js",
  "theme": "gatsby-theme-blog",
}
`;

exports[`Shadow File resource e2e shadow file resource test: ShadowFile update plan 1`] = `
Object {
  "currentState": Object {
    "_message": "Shadowed src/gatsby-theme-blog/components/author.js from gatsby-theme-blog",
    "contents": "import React from 'react'

export default () => <h1>F. Scott Fitzgerald</h1>
",
    "id": "src/gatsby-theme-blog/components/author.js",
    "path": "src/gatsby-theme-blog/components/author.js",
    "theme": "gatsby-theme-blog",
  },
  "describe": "Shadow src/components/author.js from the theme gatsby-theme-blog",
  "diff": "",
  "id": "src/gatsby-theme-blog/components/author.js",
  "newState": Object {
    "contents": "import React from 'react'

export default () => <h1>F. Scott Fitzgerald</h1>
",
    "id": "src/gatsby-theme-blog/components/author.js",
    "path": "src/components/author.js",
    "theme": "gatsby-theme-blog",
  },
  "path": "src/components/author.js",
  "theme": "gatsby-theme-blog",
}
`;
